GearsetPOC/force-app/main/default/objects/Lead/fields/Conference_or_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_or_Event_End_Date__c</fullName>
    <label>Conference or Event End Date</label>
    <type>Date</type>
</CustomField>