GearsetPOC/force-app/main/default/objects/Lead/fields/Conference_or_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_or_Event_Name__c</fullName>
    <label>Conference or Event Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>