GearsetPOC/force-app/main/default/objects/Lead/fields/Owned_by__c.field-meta.xml
<CustomField>
    <fullName>Owned_by__c</fullName>
    <label>Owned by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Eurostar for Business</fullName>
            </value>
            <value>
                <fullName>International &amp; Overseas Development</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>OTA &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>