GearsetPOC/force-app/main/default/objects/Lead/fields/Special_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Special_Rate_Code__c</fullName>
    <label>Special Rate Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>