GearsetPOC/force-app/main/default/objects/Lead/listViews/MICE_Conference_Events_All.listView-meta.xml
<ListView>
    <fullName>MICE_Conference_Events_All</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Conference_or_Event_Name__c</columns>
    <columns>Number_of_Delegates__c</columns>
    <columns>Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>MICE Special Rate Form</value>
    </filters>
    <label>MICE Conference/Events - All</label>
</ListView>